[Registration] Implement feature & related test. Create generic events
